(#2931) Plots use dynamic flags
Argo flags not added yet